complete validation logic